# Ouros

./: .gitignore  CMakeLists.txt  EBO.cpp  Engine.cpp  Engine.hpp  Ouros.sln  Ouros.vcxproj  Ouros.vcxproj.filters  README.md  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.hpp  VBO.cpp  VBO.hpp  Window.cpp  Window.hpp  build_and_run.bat  main.cpp
Libraries/lib/: glfw3.lib
include/: Class.hpp  EBO.hpp  Engine.hpp  Texture.hpp  VBO.hpp  Window.hpp
lib/glad/: glad.h
src/: Class.cpp  Engine.cpp  Shader.cpp  Texture.cpp  VAO.cpp  Window.cpp  glad.c  main.cpp
src/shaders/: basic.frag  basic.vert
